--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+  <div class="clock-wrapper">
+    <div class="clock"></div>
+  </div>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
