--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width,
+  <meta name="viewport" content="width=device-width,
           user-scalable=no,
           initial-scale=1.0,
           maximum-scale=1.0,
@@ -12,10 +12,14 @@
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <div class="clock-wrapper">
-    <div class="clock"></div>
+  <div class="wrapp">
+    <div class="clock-wrapper">
+      <div class="clock"></div>
+    </div>
   </div>
-<script type="text/javascript" src="./main.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
 </body>
+
 </html>
