add blocks del pseudo elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <div class="wrapp">
     <div class="clock-wrapper">
-      <div class="clock"></div>
+      <div class="clock">
+          <div class="seconds"></div>
+          <div class="minutes"></div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="./main.js"></script>
